--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ p {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #000000;
+  color: #fff;
   font-weight: 400;
   line-height: 1.3em;
 }
@@ -244,8 +244,9 @@ h1 {
 }
 
 h2 {
-  font-size: 22px;
-  margin-top: 15px;
+  font-size: 18px;
+  line-height: 26px;
+  margin-top: 13px;
   margin-bottom: 30px;
 }
 
@@ -378,7 +379,7 @@ sup {
   width: 100%;
   height: 100%;
   transition: all 0.5s cubic-bezier(0.7, 0, 0.3, 1);
-  border-right: 1px solid #e6c200;
+  /*border-right: 1px solid #e6c200;*/
 }
 
 .overlay.skew-part {
@@ -1351,7 +1352,7 @@ footer p {
     font-size: 30px;
   }
   h2.text-intro {
-    font-size: 18px;
+    font-size: 16px;
   }
   .light-btn {
     max-width: 80%;
@@ -1395,7 +1396,7 @@ footer p {
     font-size: 30px;
   }
   h2.text-intro {
-    font-size: 18px;
+    font-size: 16px;
   }
   .dialog__content {
     width: 100%;
