--- a/css/style.css
+++ b/css/style.css
@@ -1443,6 +1443,19 @@ Concrete: #CECDC1
 ========================================= */
 #mCSB_1_container {
   height: 100%;
+  /*background-image: url(../img/art.svg);
+  background-size: 15%;
+  background-repeat: no-repeat;
+  background-position: right top;*/
+}
+.bauhaus {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-image: url(../img/art.svg);
+  background-size: 15%;
+  background-repeat: no-repeat;
+  background-position: right top;
 }
 #right-side {
   height: 100%;
@@ -1469,7 +1482,6 @@ h3 {
   text-transform: none;
   margin-bottom: 18px;
 }
-
 #open-more-info {
   background: #FF6A5F;
   border: 2px solid #FF6A5F;
